--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "@lesjoursfr/html-to-epub",
-	"version": "4.1.1",
+	"name": "@huyht/html-to-epub",
+	"version": "1.0.0",
 	"description": "A library to generate EPUB from HTML. Inspired by epub-gen.",
 	"license": "MIT",
-	"repository": "lesjoursfr/html-to-epub",
-	"homepage": "https://github.com/lesjoursfr/html-to-epub#readme",
+	"repository": "huyht/html-to-epub",
+	"homepage": "https://github.com/huynhtuanhuy/html-to-epub#readme",
 	"bugs": {
-		"url": "https://github.com/lesjoursfr/html-to-epub/issues"
+		"url": "https://github.com/huynhtuanhuy/html-to-epub/issues"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -50,10 +50,11 @@
 		"rehype-stringify": "^10.0.0",
 		"unified": "^11.0.3",
 		"unist-util-visit": "^5.0.0",
-		"uslug": "^1.0.4"
+		"uslug": "^1.0.4",
+		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
-		"@tsconfig/node18": "^18.2.2",
+		"@tsconfig/node16": "^16.1.0",
 		"@types/archiver": "^5.3.3",
 		"@types/diacritics": "^1.3.1",
 		"@types/ejs": "^3.1.3",
@@ -62,10 +63,12 @@
 		"@types/mocha": "^10.0.2",
 		"@types/node": "^20.8.0",
 		"@types/uslug": "^1.0.2",
-		"@typescript-eslint/eslint-plugin": "^6.7.3",
-		"@typescript-eslint/parser": "^6.7.3",
-		"eslint": "^8.50.0",
-		"eslint-config-prettier": "^9.0.0",
+		"@types/uuid": "^9.0.2",
+		"@typescript-eslint/eslint-plugin": "^5.60.1",
+		"@typescript-eslint/parser": "^5.60.1",
+		"ava": "^5.3.1",
+		"eslint": "^8.43.0",
+		"eslint-config-prettier": "^8.8.0",
 		"mocha": "^10.2.0",
 		"prettier": "^3.0.3",
 		"ts-node": "^10.9.1",
